# program-honeyspoon

./: .gitignore  DEPLOYMENT.md  IMMEDIATE_ACTIONS.md  PROJECT_DESCRIPTION.md  REFACTORING_PLAN.md  TYPE_GENERATION_APPROACHES.md  dev.sh  package-lock.json  package.json  setup-fresh.sh  setup-localnet.sh
_archive/: DEPLOYMENT_GUIDE.md  init-devnet.ts
anchor_project/the_fool/: .eslintrc.json  Anchor.toml  Cargo.toml  DIVE_GAME_SUMMARY.md  LITESVM_STATUS.md  STACK_ERROR_FIX.md  more.md  package-lock.json  package.json  tsconfig.json
anchor_project/the_fool/migrations/: deploy.ts
anchor_project/the_fool/programs/dive_game/: Cargo.toml
anchor_project/the_fool/programs/dive_game/src/: errors.rs  events.rs  game_math.rs  lib.rs  rng.rs  states.rs
anchor_project/the_fool/programs/dive_game/src/instructions/: cash_out.rs  clean_expired_session.rs  init_config.rs  init_house_vault.rs  lose_session.rs  mod.rs  play_round.rs  reset_vault_reserved.rs  start_session.rs  toggle_house_lock.rs  update_config.rs  withdraw_house.rs
anchor_project/the_fool/programs/the_fool/: Cargo.toml
anchor_project/the_fool/programs/the_fool/src/: lib.rs
anchor_project/the_fool/scripts/: cleanup-bot.ts  fund-vault.ts  init-localnet.ts  quick-rng-test.ts  stats-test.ts  update-config-simple.ts  vault-admin.ts
anchor_project/the_fool/tests/: dive-game.ts  the_fool.ts
anchor_project/the_fool/tests/litesvm/: additional-tests.ts  dive-game-litesvm.ts  error-parser-demo.test.ts  errorParser.ts  game.ts  skip_tests.txt  test-helpers.ts
anchor_project/the_fool/tests/localnet/: debug-rng.test.ts  game-flow.test.ts
frontend/the_fool/: .gitignore  .prettierignore  ANALYSIS-VERIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ASSET_DOWNLOAD_GUIDE.md  BEACH-LAYOUT-UPDATE.md  BLINDSPOT-FIXES-SUMMARY.md  BOAT-FEATURE.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE-TEST-SUMMARY.md  DEEP_ANALYSIS.md  FINAL-SUMMARY.md  POLISH-IMPROVEMENTS.md  PORT_IMPLEMENTATION_STATUS.md  REFACTORING_PLAN.md  REFACTOR_SUMMARY.md  SCENE-SYSTEM-UPDATE.md  SESSION-3-SUMMARY.md  SMOOTH-TRANSITIONS.md  SOLANA_REFACTOR_PLAN.md  SOLANA_REFACTOR_PLAN_REVISED.md  SPRITE-AUDIT.md  more.md  (+19 more)
scripts/: deploy-and-fix-vault.sh  deploy-devnet.sh  fund-vault-devnet.ts  generate-parsers.ts  health-check.ts  init-game-config.ts  sync-idl.sh  update-game-config.ts  verify-deployment.sh
(+139 files in other folders)
