[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "thin"  # Use thin LTO instead of fat
codegen-units = 16  # More parallel compilation
opt-level = 3  # Standard optimization

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
