[package]
name = "dive_game"
version = "0.1.0"
description = "Dive game smart contract for Solana"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))',
    'cfg(target_os, values("solana"))',
] }
# Allow deprecation warnings from Anchor's internal macro expansions
deprecated = "allow"

[lib]
crate-type = ["cdylib", "lib"]
name = "dive_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
rstest = "0.18"
