[package]
name = "dive_game"
version = "0.1.0"
description = "Dive game smart contract for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dive_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
solana-program = "2.2"

[dev-dependencies]
rstest = "0.26"
