[package]
name = "dive_game"
version = "0.1.0"
description = "Dive game smart contract for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dive_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
tsify = ["dep:tsify", "dep:serde", "dep:wasm-bindgen"]

[dependencies]
anchor-lang = "0.32.1"
solana-program = "2.3"
tsify = { version = "0.5.6", features = ["wasm-bindgen"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rstest = "0.26"
